--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,33 @@
 body {
   font-family: Montserrat-Black 900;
 }
+
 #title {
   background-color: #ff4c68;
   color: #fff;
 }
+
 .navbar {
   padding-bottom: 4.5rem;
 }
+
 .navbar-item {
   padding: 0 18px;
 }
+
 .nav-link {
   font-size: 1.2rem;
   font-family: Montserrat;
 }
+
 h1 {
   font-family: Roboto;
   font-size: 3.5rem;
   line-height: 1.5;
 }
+
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* navigation bar */
@@ -30,58 +36,124 @@ h1 {
   font-size: 2.5rem;
   font-weight: bold;
 }
+
 .download-button {
   margin: 5% 3% 5% 0;
 }
+
 /* title image */
 .title-image {
-  width: 60%;
+  width: 310px;
   transform: rotate(25deg);
+  position: absolute;
+  right: 25%;
 }
+
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
+
 .feature-box {
   text-align: center;
   padding: 5%;
 }
+
 h2 {
   font-family: Roboto;
   font-size: 3rem;
   line-height: 1.5;
 }
+
 h3 {
   font-family: Roboto;
 }
+
 p {
   color: #8f8f8f;
 }
+
 .icon {
-color: #ef8172;
-margin-bottom: 1rem;
+  color: #ef8172;
+  margin-bottom: 1rem;
 }
+
 .icon:hover {
   color: #ff4c68;
 }
-#testimonials {
 
+#testimonials {
   text-align: center;
   background-color: #ef8172;
   color: #fff;
-}.testimonial-image {
+}
+
+.testimonial-image {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
 }
+
 #press {
   background-color: #ef8172;
   text-align: center;
   padding: 3%;
 }
+
 .press-logo {
   width: 15%;
   margin: 20px 20px 50px;
 }
+
 .carousel-item {
   padding: 7% 15%;
+}
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+/* CTA Section */
+
+#cta {
+  background-color: #ff4c68;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+}
+
+.h3-cta {
+  font-family: Montserrat, Black 900;
+  line-height: 1.5;
+  font-size: 3.5rem
+}
+
+.footer-btn {
+  margin: 20px;
+}
+
+#footer {
+  background-color: #fff;
+  text-align: center;
+  padding: 7% 15%;
+}
+.social-icon {
+  margin: 20px 10px;
 }
